<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_main_show_leaderboard"
            android:title="@string/show_leaderboard"/>
    <item
        android:title="@string/main_menu_themes">
        <menu
                android:id="@+id/menu_main_theme">
            <item
                    android:id="@+id/menu_main_theme_default"
                    android:title="@string/default_theme"/>
            <item
                    android:id="@+id/menu_main_theme_dark"
                    android:title="@string/dark_theme"/>

            <item
                    android:id="@+id/menu_main_theme_fruit"
                    android:title="@string/fruit_theme"/>

            <item
                    android:id="@+id/menu_main_theme_cabin"
                    android:title="@string/cabin_theme"/>
        </menu>
    </item>

    <item
        android:title="@string/menu_main_admin">
        <menu>
            <item
                    android:id="@+id/menu_main_admin_clear_users"
                    android:title="@string/menu_main_clear_users"/>
        </menu>
    </item>


</menu>