<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:id="@+id/fragment_start"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gui.fragments.StartFragment">


    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <TextView
                android:text="@string/fragment_start_text_select_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_start_text_select_users" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <Button
                android:text="@string/fragment_start_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_start_button_start"
                android:layout_marginBottom="164dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textSize="24sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Spinner
                android:id="@+id/fragment_start_spinner_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_start_text_player1"
                app:layout_constraintStart_toStartOf="parent"/>
        <Spinner
                android:id="@+id/fragment_start_spinner_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_start_text_player2"/>
        <TextView
                android:id="@+id/fragment_start_text_player1"
                android:text="@string/fragment_start_text_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_start_text_select_users"/>
        <TextView
                android:id="@+id/fragment_start_text_player2"
                android:text="@string/fragment_start_text_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_start_spinner_player1"
                app:layout_constraintStart_toStartOf="parent"/>


        <TextView
                android:id="@+id/fragment_start_text_dimension"
                android:text="@string/unloaded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/fragment_start_button_start"/>


        <TextView
                android:text="@string/fragment_start_text_select_dimension"
                android:id="@+id/fragment_start_text_select_dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/fragment_start_seekbar_dimension"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <SeekBar
                android:id="@+id/fragment_start_seekbar_dimension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/fragment_start_text_dimension"
        />

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fragment_start_fab_add_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_white_24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>